# TimeRecorder

./: .gitignore  CMakeLists.txt  Recorder.db
Base/: CMakeLists.txt  README.md
Base/include/: TimeRecorder.h  TimeRecorder_sol_first.h  TimeRecorder_sql_sqlite.h
Base/src/: TimeRecorder.cpp  TimeRecorder_sol_first.cpp  TimeRecorder_sql_sqlite.cpp
Base/zqlTools/: README.md
Test/: TestSQLite.cpp
design/: 类图.vsdx
include/: TimeRecorder.h  TimeRecorderBase.h  TimeRecorderLog.h  TimeRecorderSQL.h  TimeRecorderSQLite.h  TimeRecorderWin32.h
src/: TimeRecorder.cpp  TimeRecorderBase.cpp  TimeRecorderLog.cpp  TimeRecorderSQL.cpp  TimeRecorderSQLite.cpp  TimeRecorderWin32.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
testlog/: info_121_6_8.txt
